--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -11,6 +11,7 @@ jobs:
       PYTHONIOENCODING: utf-8
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         python-version: [3.11]
