--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -2,9 +2,7 @@ name: Python package
 
 on:
   push:
-    branches:
-      - main
-
+  
 jobs:
   build:
     env:
@@ -27,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          pip install -r requirements.txt
 
       - name: Build executable
         run: pyinstaller -F -n dlctool main.py
