--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -1,10 +1,10 @@
 name: Python package
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch
+  - push:
+      branches:
+        - main
+  - workflow_dispatch:
 
 jobs:
   build:
